# aris

./: .env.example  .gitignore  CLAUDE.md  aris.py  requirements.txt  run-aris.ps1
app/: __init__.py  config.py  logging_setup.py  main.py
app/core/: command_processor.py
app/managers/: __init__.py  memory.py  notes.py
app/services/: gemini.py  music.py  tts.py  volume.py  weather.py
app/ui/: app.py
app/utils/: dates.py
backend/: main.py  pyproject.toml  requirements.txt
backend/aris/: __init__.py  assistant.py  config.py
backend/aris/agents/: __init__.py  gemini_agent.py  tools.py
backend/aris/api/: __init__.py  events.py  gateway.py
backend/aris/core/: __init__.py  context.py  orchestrator.py  registry.py  skill.py
backend/aris/llm/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py
backend/aris/memory/: __init__.py  embeddings.py  long_term.py  profile.py  short_term.py
backend/aris/services/: __init__.py  volume.py  weather.py
backend/aris/skills/: __init__.py  apps.py  datetime_skill.py  memory_skill.py  notes.py  playlists.py  profile_skill.py  volume.py  weather.py
backend/aris/utils/: __init__.py  dates.py
backend/aris/voice/: __init__.py  loop.py  stt.py  tts.py
backend/tests/: test_apps.py  test_assistant.py  test_config.py  test_datetime_skill.py  test_llm.py  test_long_term.py  test_memory.py  test_memory_skill.py  test_notes.py  test_orchestrator.py  test_playlists.py  test_profile.py  test_profile_skill.py  test_registry.py  test_tools.py  test_voice_loop.py  test_volume.py  test_weather.py
docs/design/: hud-tokens.md
docs/superpowers/plans/: 2026-06-29-fase0-backend-nucleo.md
docs/superpowers/specs/: 2026-06-29-aris-fase-0-fundacao-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArisGlobe.tsx  ArisHeader.tsx  ArisOrb.tsx  BottomNavigation.tsx  Controls.tsx  Hud.tsx  Log.tsx  MicButton.tsx  SuggestionCard.tsx  TechMesh.tsx  Transcript.tsx  VoiceButton.tsx  Waveform.tsx
frontend/src/hooks/: useAris.ts
frontend/src/pages/: ArisAssistant.tsx
frontend/src/state/: store.ts
