[project]
name = "aris-backend"
version = "0.1.0"
description = "ARIS — núcleo headless do assistente de voz"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "google-generativeai>=0.8",
    "requests>=2.31",
    "loguru>=0.7",
    "speechrecognition>=3.17.0",
    "edge-tts>=7.2.8",
    "pyttsx3>=2.99",
    "pyaudio>=0.2.14",
]

# Dependências de desenvolvimento (instaladas por padrão com `uv sync`).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "httpx>=0.27",
    "websockets>=12.0",
]

# O backend é uma aplicação, não uma biblioteca publicável: o uv não tenta
# "buildar"/instalar o próprio pacote; o código é importado via pythonpath.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # google.generativeai (legado) emite FutureWarning de deprecação no import.
    # Mantido na Fase 0 por paridade; silenciado para a saída dos testes ficar limpa.
    "ignore:(?s).*google.generativeai.*:FutureWarning",
]
